--- a/flux/base/resourcequota.yaml
+++ b/flux/base/resourcequota.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: jaeger
 spec:
   hard:
-    requests.cpu: "128mi"
+    requests.cpu: "128m"
     requests.memory: 128Mi
-    limits.cpu: "256mi"
+    limits.cpu: "256m"
     limits.memory: 256Mi
     pods: "10"
